# lila-engine

./: Cargo.toml  Dockerfile  README.md  example-client.py  example-provider.py  lichess-deploy.sh  lila-engine.service  lila-engine.socket
.github/workflows/: build.yml  ci.yml  docker.yml
src/: api.rs  emit.rs  hub.rs  main.rs  ongoing.rs  repo.rs  uci.rs
src/model/: client_secret.rs  engine.rs  job_id.rs  mod.rs  multi_pv.rs  provider_secret.rs  uci_variant.rs
test/: acquire.sh  analyse.sh  create.sh  env.sh  get.sh  list-engines.sh  serve.sh
