[package]
name = "lila-engine"
version = "0.1.0"
description = "External engine server for lichess.org"
repository = "https://github.com/lichess-org/lila-engine"
license = "AGPL-3.0-or-later"
authors = ["Niklas Fiekas <niklas@lichess.org>"]
categories = ["games"]
keywords = ["chess", "lichess"]
edition = "2021"

[dependencies]
axum = "0.6.0-rc.1"
axum-extra = { version = "0.4.0-rc.1", features = ["typed-routing"] }
axum-macros = "0.3.0-rc.1"
clap = { version = "3.2.20", features = ["derive"] }
env_logger = "0.9.1"
futures = "0.3.24"
futures-util = "0.3.24"
log = "0.4.17"
memchr = "2.5.0"
mongodb = { version = "2.3.0", features = ["tokio-runtime"] }
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_with = "2.0.1"
sha2 = "0.10.6"
shakmaty = { version = "0.22.0", features = ["variant"] }
thiserror = "1.0.36"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = "0.1.10"
tokio-util = "0.7.4"
tower-http = { version = "0.3.4", features = ["cors"] }
