[package]
name = "lila-engine"
publish = false
description = "External engine server for lichess.org"
repository = "https://github.com/lichess-org/lila-engine"
license = "AGPL-3.0-or-later"
categories = ["games"]
keywords = ["chess", "lichess"]
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-routing", "json-lines"] }
axum-macros = "0.5"
clap = { version = "4", features = ["derive", "deprecated", "env"] }
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
listenfd = "1"
log = "0.4"
memchr = "2"
mongodb = "3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
sha2 = "0.10"
shakmaty = { version = "0.30", features = ["variant"] }
thiserror = "2"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
